--- a/GalloTube/Views/Shared/_LayoutAdmin.cshtml
+++ b/GalloTube/Views/Shared/_LayoutAdmin.cshtml
@@ -48,7 +48,7 @@
                         <a asp-action="Index" asp-controller="Videos"
                             class="nav-link @(ViewBag.Title == "Filmes" ? "active" : "link-body-emphasis")">
                             <i class="bi bi-film me-2"></i>
-                            M
+                            Musicas
                         </a>
                     </li>
                     <li>
@@ -58,25 +58,7 @@
                             Genêros
                         </a>
                     </li>
-                    <li>
-                        <a href="#" class="nav-link @(ViewBag.Title == "Usuários" ? "active" : "link-body-emphasis")">
-                            <i class="bi bi-people-fill me-2"></i>
-                            Usuários
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#"
-                            class="nav-link @(ViewBag.Title == "Comentários" ? "active" : "link-body-emphasis")">
-                            <i class="bi bi-chat-text-fill me-2"></i>
-                            Comentários
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link @(ViewBag.Title == "Avaliações" ? "active" : "link-body-emphasis")">
-                            <i class="bi bi-stars me-2"></i>
-                            Avaliações
-                        </a>
-                    </li>
+                    
                 </ul>
                 <hr>
                 <div class="dropdown">
