--- a/GalloTube/Views/Videos/Index.cshtml
+++ b/GalloTube/Views/Videos/Index.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Músicas</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Nova Música</a>
 </p>
 <table class="table">
     <thead>
