--- a/GalloTube/Views/Home/Index.cshtml
+++ b/GalloTube/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="album py-5">
     <div class="text-center mb-5">
-        <h1 class="display-4">Tudo sobre o mundo dos Filmes</h1>
+        <h1 class="display-4">Tudo sobre o mundo dos Vídeos</h1>
     </div>
 
     <div class="container">
