--- a/GalloTube/Views/Home/Index.cshtml
+++ b/GalloTube/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="album py-5">
     <div class="text-center mb-5">
-        <h1 class="display-4">Tudo sobre o mundo dos Vídeos</h1>
+        <h1 class="display-4">Tudo sobre o mundo das Músicas</h1>
     </div>
 
     <div class="container">
@@ -18,7 +18,7 @@
                 <div class="col">
                     <div class="card shadow-sm">
                         <img class="bd-placeholder-img card-img-top" width="100%" height="400"
-                        src="@Video.VideoFile">
+                        src="@Video.Thumbnail">
                         <div class="card-body">
                             <p class="card-text text-center">@Video.Name</p>
                             <div class="d-flex align-items-center mb-2">
