--- a/GalloTube/Views/Shared/_Layout.cshtml
+++ b/GalloTube/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand fw-bold" asp-controller="Home" asp-action="Index">
-                    GALLO<span class="text-logo">FLIX</span>
+                    GALLO<span class="text-logo">TUBE</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
