--- a/GalloTube/wwwroot/css/site.css
+++ b/GalloTube/wwwroot/css/site.css
@@ -14,7 +14,7 @@ body {
 }
 
 .btn-bd-primary {
-  --bd-red-bg: darkred;
+  --bd-red-bg: #FF0000;
   --bd-red-rgb: 112.520718, 44.062154, 249.437846;
 
   --bs-btn-font-weight: 600;
@@ -22,12 +22,12 @@ body {
   --bs-btn-bg: var(--bd-red-bg);
   --bs-btn-border-color: var(--bd-red-bg);
   --bs-btn-hover-color: var(--bs-white);
-  --bs-btn-hover-bg: rgb(99, 5, 5);
-  --bs-btn-hover-border-color: rgb(99, 5, 5);
+  --bs-btn-hover-bg: #FF0000(99, 5, 5);
+  --bs-btn-hover-border-color: #FF0000(99, 5, 5);
   --bs-btn-focus-shadow-rgb: var(--bd-red-rgb);
   --bs-btn-active-color: var(--bs-btn-hover-color);
-  --bs-btn-active-bg: darkred;
-  --bs-btn-active-border-color: darkred;
+  --bs-btn-active-bg: #FF0000;
+  --bs-btn-active-border-color: #FF0000;
 }
 .bd-mode-toggle {
   z-index: 1500;
@@ -45,7 +45,7 @@ body {
 
 .navbar-brand{
   font-size: 24px !important;
-  color: darkred;
+  color: #FF0000;
 }
 
 a {
